# copylot

./: .gitignore  README.md  ci_env.sh  main.py  pyproject.toml
.github/workflows/: main.yml  unittest.yml
app/: __init__.py  copylot.py
app/components/: __init__.py  root.py
tests/: test_root.py
