[tool.poetry]
name = "copylot"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "2.0.0"
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/b70abb5.zip"}
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]
buildozer = "^1.2.0"
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
Cython = "^0.29.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
